# remote-iserv

remote-iserv-client/: ChangeLog.md  default.nix  remote-iserv-client.cabal
remote-iserv-client/GHCi/Remote/: Client.hs
remote-iserv-common/: ChangeLog.md  LICENSE  default.nix  remote-iserv-common.cabal
remote-iserv-common/GHCi/Remote/: LibMessage.hs  Protocol.hs
remote-iserv-server/: ChangeLog.md  default.nix  remote-iserv-server.cabal
remote-iserv-server/GHCi/Remote/: Server.hs
